# emscripten-in-wasmer

./: readme.md
magic-lib/: Cargo.toml
magic-lib/src/: lib.rs
magic-server/: Cargo.toml
magic-server/src/: main.rs
