[package]
name = "magic-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0" }
wasmer = { version = "3.0" }
wasmer-emscripten = { version = "3.2" }
wasmer-compiler-singlepass = { version = "3.2" }
